--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Press a key to start!</h1>
 
+    <div type="button" id="startBtn">start!</div>
+
     <a href="./ruleBook/ruleBook.html">RuleBook</a>
+
 
     <div class="container">
         <div type="button" id="green" class="green btn"></div>
